# collegeWork

./: test.txt
Assignments/year3/: gRPC Planning.excalidraw  mobile planning.excalidraw  template_project2.py
Labs/data/wk7/: 2  (+2 more)
Notes/.obsidian/: app.json  workspace.json
Notes/TODO/: Current Agenda.md  TODO.md  todo.org
Notes/year2/: Year 2 Semester 2 Breakdown.md  Year 2 Semester 2 Breakdown.org
Placement/: DanielSodenCV(1).docx
Projects/portfolio/: go.mod  index.html  main.go
Projects/setup/: setup.sh  setup.zsh
algo/wk1/: dataStruct.org  randomAcc.org
collegeConfigs/: .vimrc
data/wk2/: lec1.org
engin/wk2/: lec1.org
finalProj/: ideas.txt
forAll/clab/: lab1.md
labs/reqengin/: lab3task2.vpp
lectures/algo/: .#priorqueues.org  dataStruct.org  dataType.org  priorqueues.org  sorting.org
myAssigments/Assignment_LDSA_2/: Activity.java  BinaryTrie.java  DivideAndConquer.java  HeapOfBinaryTries.java  Huffman.java  MergeSort.java  QuickSort.java
myAssigments/assignment1/: ArrayQueue.java  ArrayStack.java  DoubleLinkedList.java
myAssigments/databases1/: .~lock.DatabaseDesignAss1-24.odt#  .~lock.Untitled 1.odt#  DatabaseDesignAss1-24.odt  Untitled 1.odt
myAssigments/lindataAssignments1/: ArrayStack.java  DoubleLinkedList.java  DynamicStack.java
myAssigments/project2db/: DatabasesDanielSodenProj2.odt
oop/: descrip.org
oop/sideNotes/: uml.org
oop/wk1/: lec1.org
os/wk2/: lec1.org
todolist/: todo.org
y2/y2s2/notes/C/practical/lecture2/: CMakeLists.txt  main  main.c
y2/y2s2/notes/C/practical/lecture2/src/: getCharTest.c  getchar  nums
(+2098 files in other folders)
